--- a/login-frontend/src/index.css
+++ b/login-frontend/src/index.css
@@ -3,22 +3,22 @@
 * {
   font-family: Poppins;
   font-size: 62.5%;
+  box-sizing: border-box;
 }
 
 #root {
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(107.56deg, #53DFC2 0%, #38C0C0 100%);
-}
-
-body {
-  margin: 0;
-  padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
+  width: 100%;
+  min-height: 100vh;
+}
+
+body {
+  background: linear-gradient(107.56deg, #53DFC2 0%, #38C0C0 100%);
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
 }
 
 @media(max-width: 700px) {
